--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
       </intent>
    </queries>
    <application
+        android:usesCleartextTraffic="true"
         android:label="reqog"
         android:icon="@mipmap/ic_launcher">
         <activity
